name:                hpc-coveralls-experiment
version:             0.1.0.0
synopsis:            hpc-coveralls experiment
license:             BSD3
license-file:        LICENSE
author:              Guillaume Nargeot
maintainer:          killy971@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
