name:                hpc-coveralls-experiment
version:             0.1.0.0
synopsis:            hpc-coveralls experiment
license:             BSD3
license-file:        LICENSE
author:              Guillaume Nargeot
maintainer:          killy971@gmail.com
build-type:          Simple
cabal-version:       >=1.9.2

executable hpc-coveralls-experiment
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       aeson, base < 5, bytestring, curl
